CSN-95527 Implement remove IPs
