# src/main/java/com/genesis/whitelist/OperatorApiResource.java
@@ -2,8 +2,8 @@ package com.genesis.whitelist;
 
 import com.genesis.whitelist.exceptions.OperatorAlreadyExistsException;
 import com.genesis.whitelist.exceptions.OperatorMissingException;
-import com.genesis.whitelist.model.AddIpsRequest;
 import com.genesis.whitelist.model.Operator;
+import com.genesis.whitelist.model.UpdateIpsRequest;
 import com.genesis.whitelist.services.GitService;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.Path;
@@ -16,8 +16,6 @@ public class OperatorApiResource implements OperatorApi {
 
     private static final Logger LOG = Logger.getLogger(OperatorApiResource.class);
 
-    @Inject
-    OperatorApiMockGenerator mockGenerator;
     GitService gitService;
     @ConfigProperty(name = "operator-api.use-mock", defaultValue = "false")
     boolean useMock;
@@ -28,31 +26,26 @@ public class OperatorApiResource implements OperatorApi {
     }
 
     @Override
-    public Response addIps(String operatorCode, AddIpsRequest addIpsRequest) {
-        LOG.info("addIps called for operator " + operatorCode + " : " + addIpsRequest);
-
-        if (useMock) {
-            LOG.info("Using mock response for addIps");
-            return mockGenerator.mockAddIps(operatorCode, addIpsRequest);
-        }
+    public Response updateIps(String operatorCode, UpdateIpsRequest updateIpsRequest) {
         try {
-            gitService.addNewIPs(operatorCode, addIpsRequest);
+            if(updateIpsRequest.getUpdateType().equals(UpdateIpsRequest.UpdateTypeEnum.ADDITION)){
+                LOG.info("updateIps addition called for operator " + operatorCode);
+                gitService.addNewIPs(operatorCode, updateIpsRequest);
+            }else{
+                LOG.info("updateIps removal called for operator " + operatorCode);
+                gitService.removeIPs(operatorCode, updateIpsRequest);
+            }
             return Response.ok().build();
         }catch (OperatorMissingException e){
             return Response.status(Response.Status.NOT_FOUND).build();
         }
     }
 
+
     @Override
     public Response addOperator(Operator operator) {
         LOG.info("addOperator called for operator " + operator.getCode());
 
-        if (useMock) {
-            LOG.info("Using mock response for addOperator");
-            return mockGenerator.mockAddOperator(operator);
-        }
-
-        // Real implementation logic here
         try {
             gitService.addNewOperator(operator);
             return Response.status(Response.Status.CREATED).build();
@@ -65,11 +58,6 @@ public class OperatorApiResource implements OperatorApi {
     public Response getOperatorIpList(String operatorCode, String whitelistType) {
         LOG.info("getOperatorIpList called for operator " + operatorCode + " with whitelist type " + whitelistType);
 
-        if (useMock) {
-            LOG.info("Using mock response for getOperatorIpList");
-            return mockGenerator.mockGetOperatorIpList(operatorCode, whitelistType);
-        }
-
         try {
             return Response.ok(gitService.getOperatorIPs(operatorCode)).build();
         }catch(OperatorMissingException e){
@@ -81,12 +69,6 @@ public class OperatorApiResource implements OperatorApi {
     public Response getOperators() {
         LOG.info("getOperators called");
 
-        if (useMock) {
-            LOG.info("Using mock response for getOperators");
-            return mockGenerator.mockGetOperators();
-        }
-
-        // Real implementation logic here
         return Response.ok(gitService.getAllOperators()).build();
     }
 }
