# src/main/resources/META-INF/openapi.yml
@@ -101,12 +101,12 @@ paths:
           description: Operator not found
         '500':
           description: Internal server error
-    post:
+    patch:
       tags:
         - Operator
-      summary: Add new IPs to the partner's list
-      description: Add new IPs to the partner's list. Also accepts CIDR blocks.
-      operationId: addIps
+      summary: Update partner's IP list
+      description: Add or remove IPs from partner's list
+      operationId: updateIps
       parameters:
         - name: operatorCode
           in: path
@@ -121,23 +121,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                whitelistType:
-                  type: string
-                  enum:
-                    - API
-                    - BACK_OFFICE
-                newIps:
-                  type: array
-                  items:
-                    type: string
-                    minLength: 1
-                    maxLength: 50
-                    pattern: ^(?:(?:25[0-5]|2[0-4][0-9]|1?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|1?[0-9][0-9]?)(?:\/(?:3[0-2]|[12]?[0-9]))?$
-            example:
-              whitelistType: API
-              newIps: ["1.2.3.4","1.2.3.5/31"]
+              $ref: '#/components/schemas/UpdateIpsRequest'
         required: true
       responses:
         '201':
@@ -148,7 +132,6 @@ paths:
           description: Operator not found
         '500':
           description: Internal server error
-
 components:
   schemas:
     Operator:
@@ -176,11 +159,11 @@ components:
       example:
         errorCode: EXISTING_OPERATOR
         errorMessage: The new operator already exists in Git
-    AddIpsRequest:
+    UpdateIpsRequest:
       type: object
       required:
         - whitelistType
-        - newIps
+        - ips
       properties:
         whitelistType:
           type: string
@@ -188,17 +171,22 @@ components:
             - API
             - BACK_OFFICE
           description: Type of whitelist to update
-        newIps:
+        updateType:
+          type: string
+          enum:
+            - ADDITION
+            - REMOVAL
+        ips:
           type: array
           items:
             type: string
             minLength: 1
             maxLength: 50
             pattern: ^(?:(?:25[0-5]|2[0-4][0-9]|1?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|1?[0-9][0-9]?)(?:\/(?:3[0-2]|[12]?[0-9]))?$
-          description: List of IPs/CIDR blocks to add
+          description: List of IPs/CIDR blocks to add or remove
       example:
         whitelistType: API
-        newIps: [ "1.2.3.4", "1.2.3.5/31" ]
+        ips: [ "1.2.3.4", "1.2.3.5/31" ]
   securitySchemes:
     BasicAuth:
       type: http
